--- a/internal/assets/manifests/meshgateway/templates/deployment.yaml
+++ b/internal/assets/manifests/meshgateway/templates/deployment.yaml
@@ -1,4 +1,5 @@
 {{- $gateway := .Values.deployment }}
+{{- $service := .Values.service -}}
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -47,7 +48,7 @@ spec:
           imagePullPolicy: {{ $gateway.imagePullPolicy }}
 {{- end }}
           ports:
-            {{- range $key, $val := $gateway.ports }}
+            {{- range $key, $val := $service.ports }}
             - containerPort: {{ $val.targetPort | default $val.port }}
               protocol: {{ $val.protocol | default "TCP" }}
             {{- end }}
