fix replicas handling in mgw deployment

--- a/internal/assets/manifests/meshgateway/templates/deployment.yaml
+++ b/internal/assets/manifests/meshgateway/templates/deployment.yaml
@@ -9,11 +9,7 @@ metadata:
 {{- include "deployment.labels" . | indent 4 }}
 {{- include "toYamlIf" (dict "value" $gateway.metadata.annotations "key" "annotations" "indent" 2) | indent 2 }}
 spec:
-{{- if not $gateway.autoscaleEnabled }}
-{{- if $gateway.replicaCount }}
-  replicas: {{ $gateway.replicaCount }}
-{{- end }}
-{{- end }}
+  replicas: {{ $gateway.replicas.count | default 1 }}
   selector:
     matchLabels:
 {{- include "pod.labels" . | indent 6 }}
